@@ -3,6 +3,7 @@
 * Optimized scope-handling functions, {loop} and {with} are now slightly faster
 * Fixed a bug in {date_format} that prevented anything but unix timestamps to
   work
+* {literal} and {strip} now follow the LooseOpeningsHandling setting
 
 [2008-05-10] 0.9.0
 ! BC Break: changed all class names to be PEAR compliant (aka use underscores
